--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^2.1.0",
+    "axios": "^1.6.7",
     "expo": "~50.0.4",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
+    "react-hook-form": "^7.50.0",
     "react-native": "^0.73.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1"
   },
