--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.7",
-    "expo": "~50.0.4",
+    "expo": "~50.0.14",
+    "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
+    "expo-task-manager": "^11.7.2",
     "react": "18.2.0",
     "react-hook-form": "^7.50.0",
-    "react-native": "^0.73.2",
+    "react-native": "^0.73.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-redux": "^9.1.0",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "react-native-maps": "1.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
