--- a/package.json
+++ b/package.json
@@ -18,16 +18,20 @@
     "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.7",
     "expo": "~50.0.14",
+    "expo-file-system": "^16.0.8",
     "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
     "expo-task-manager": "^11.7.2",
     "react": "18.2.0",
     "react-hook-form": "^7.50.0",
     "react-native": "^0.73.6",
+    "react-native-fs": "^2.20.0",
+    "react-native-geojson": "^0.1.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-maps": "1.10.0",
+    "react-native-modal": "^13.0.1",
     "react-redux": "^9.1.0",
-    "redux": "^5.0.1",
-    "react-native-maps": "1.10.0"
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
